k8s/ingress/order-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orderservice-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    # nginx.ingress.kubernetes.io/ssl-redirect: "false" # Uncomment if testing without SSL
spec:
  ingressClassName: nginx
  rules:
    - host: order.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: orderservice
                port:
                  number: 8080
