k8s/ingress/payment-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: payment-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
spec:
  ingressClassName: nginx
  rules:
    - host: payment.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: paymentservice
                port:
                  number: 8080
