k8s/ingress/user-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: userservice-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: user.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: userservice
                port:
                  number: 8080
